apps/monitoring/goldilocks/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goldilocks-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: "goldilocks.${PUBLIC_HOSTNAME}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-monitoring
                port:
                  number: 9000
